--- a/nosotros.html
+++ b/nosotros.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--SEO-->
-    <title>SucuWorld - Contacto</title>
+    <title>SucuWorld - Nosotros</title>
     <meta name="description"
-        content="Contactate con nosotros a través de nuestro mail o telefono. Tambien podes visitarnos en nuestra tienda fisica ubicada en La Rioja, Argentina">
-    <meta name="keywords" content="SUCULENTA, SUCULENTAS, VIVERO, CONTACTO, TELEFONO, UBICACION, EMAIL">
+        content="Sucuworld es un vivero especializado en el cultivo de suculentas. Comercializamos cientos de variedades, y en nuestro sitio podes aprender sobre los cuidados de cada una de ellas y mucho más.">
+    <meta name="keywords" content="SUCULENTA, SUCULENTAS, VIVERO, ESPECIES, CUIDADOS, NOSOTROS">
 
     <!--TIPOGRAFIAS LINKEADAS DE GOOGLEFONTS-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -25,12 +25,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+
     <!--CDN ICONOS DE BOOTSTRAP-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
     <!--LINK DEL ARCHIVO CSS-->
     <link rel="stylesheet" href="css/estilo.css">
-
 </head>
 
 <body>
@@ -66,8 +66,8 @@
         </div>
 
         <!--MENU PRINCIPAL-->
-        <nav class="container navbar navbar-expand-lg navbar-dark sticky-top">
-            <div class="container-fluid">
+        <nav class="container navbar navbar-expand-lg navbar-dark fixed-top sticky-top">
+            <div class="container-fluid ">
 
                 <a class="navbar-brand" href="index.html">
                     <h1>SucuWorld</h1>
@@ -95,110 +95,102 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="nosotros.html">Nosotros</a>
+                            <a class="nav-link active" href="nosotros.html">Nosotros</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link active" href="contacto.html">Contacto</a>
+                            <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
-
             </div>
         </nav>
     </header>
 
     <main>
-        <!--CAJITAS INFO-->
-        <div class="contactoInfo">
+        <!-- SOBRE NOSOTROS -->
+        <div class="seccionNosotros">
+
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
-                        <div class="contactoItem">
-                            <i class="bi bi-telephone"></i>
-                            <h4>Telefono</h4>
-                            <p>Horarios de atencion son de 09:00 a 20:00 hs.</p>
-                            <a href="#">54-3804-681434</a>
+
+                    <div class="col-md-12">
+
+                        <div class="row">
+                            <div class="col-md-6 align-self-center">
+                                <div class="infoIzquierda">
+                                    <span>Mas de 20 años de experiencia</span>
+                                    <h2>Sucuworld<em> Vivero</em></h2>
+                                    <p>
+                                        Vivero SucuWorld nació como un emprendimiento familiar en 1995 en la Ciudad
+                                        de La Rioja Capital, Argentina. Nos especializamos en el cultivo
+                                        comercializacion y asesoramiento profesional de Suculentas y Cactus. Con el
+                                        tiempo fuimos creciendo de la mano de nuestros clientes, y actualmente
+                                        contamos con tres invernáculos donde producimos más de 300 especies
+                                        diferentes.
+                                    </p>
+
+                                    <a href="contacto.html" class="botonVerde">Visitanos</a>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6">
+                                <div class="imagenDerecha">
+                                    <img src="imagenes/imgvivero.jpg" alt="Vivero Sucuworld">
+                                </div>
+                            </div>
+
                         </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="contactoItem">
-                            <i class="bi bi-envelope"></i>
-                            <h4>Email</h4>
-                            <p>Contactanos a través de nuestro correo electronico</p>
-                            <a href="">contacto@sucuworld.com</a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="contactoItem">
-                            <i class="bi bi-geo-alt"></i>
-                            <h4>Ubicacion</h4>
-                            <p>Av. Ortiz de Ocampo 967<br>La Rioja, CD 5300</p>
-                            <a href="https://goo.gl/maps/yNbtEaQCS7rubBVB6">Ver en Google Maps</a>
-                        </div>
+
                     </div>
                 </div>
             </div>
         </div>
 
-        <!--VISITA NUESTRO LOCAL-->
-        <div class="container">
-            <div class="row">
-
-                <div class="col-md-12">
-
-                    <div class="tituloSeccion">
-                        <h2>Visita nuestro local</h2>
-                    </div>
-
-                    <div id="map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3474.655577759255!2d-66.85919716179197!3d-29.43886131626118!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9427d97e2d8f247d%3A0x32751768137beb4d!2zMjnCsDI2JzE0LjEiUyA2NsKwNTEnMzIuNiJX!5e0!3m2!1ses-419!2sar!4v1627601392122!5m2!1ses-419!2sar" width="100%" height="330" style="border:0;"></iframe>
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
-
-        <!--SECCION DE FORMULARIO-->
-        <section class="seccionFondoGris">
+        <!--SOBRE MIEMBROS EQUIPO-->
+        <div class="seccionFondoGris">
 
             <div class="container">
+                <div class="row">
 
-                <div class="tituloSeccion">
-                    <h2>Podes contactarnos ante cualquier duda, comentario o sugerencia</h2>
+                    <div class="col-md-12">
+                        <div class="tituloEquipo">
+                            <h2>Nuestro equipo</h2>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="miembroEquipo">
+                            <div class="infoEquipo">
+                                <img src="imagenes/aurelio.jpg" alt="Aurelio Ruiz">
+                                <h4>Aurelio Ruiz</h4>
+                                <span>Ingeniero Agrónomo</span>
+                                <p>Co-fundador. Cuenta con mas de 17 años ligado al cultivo de plantas suculentas.
+                                    Trabajó en el cuidado y creación de espacios verdes tanto públicos como privados. Se
+                                    encuentra ligado al área verde del Parque de la Ciudad, en La Rioja. Docente e
+                                    instructor en cursos
+                                    de cultivo y reproducción. </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="miembroEquipo">
+                            <div class="infoEquipo">
+                                <img src="imagenes/liliana.jpg" alt="Liliana Cerezo">
+                                <h4>Liliana Cerezo</h4>
+                                <span>Licenciada</span>
+                                <p>Coleccionista, viverista, apasionada de las plantas. Cuenta con mas de 11 años de
+                                    experiencia en el cultivo de cactus y suculentas. De profesión Licenciada en
+                                    Administración. Colabora permanentemente con diversas asociaciones de coleccionistas
+                                    y profesionales del rubro. </p>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
-
-                <form role="form">
-
-                    <div class="row">
-                        <div class="form-group col-md-6">
-                            <label for="Nombre">Nombre:</label>
-                            <input type="text" class="form-control" id="Nombre" placeholder="Introduce tu Nombre">
-                        </div>
-
-                        <div class="form-group col-md-6">
-                            <label for="email">Email:</label>
-                            <input type="email" class="form-control" id="email" placeholder="Introduce tu email">
-                        </div>
-                    </div>
-
-                    <div class="form-group mb-3">
-                        <label for="mensaje:">Mensaje:</label>
-                        <textarea class="form-control" name="mensaje" id="" cols="50" rows="6"></textarea>
-
-                    </div>
-
-                    <div class="checkbox mb-3">
-                        <label>No soy un Robot</label>
-                        <input type="checkbox">
-                    </div>
-
-                    <input type="submit" value="Enviar" class="botonVerde">
-
-                </form>
             </div>
-        </section>
+        </div>
 
     </main>
 
