--- a/contacto.html
+++ b/contacto.html
@@ -7,9 +7,11 @@
 
     <!--SEO-->
     <title>SucuWorld - Contacto</title>
-    <meta name="description"
-        content="Contactate con nosotros a través de nuestro mail o telefono. Tambien podes visitarnos en nuestra tienda fisica ubicada en La Rioja, Argentina">
+    <meta name="description" content="Contactate con nosotros a través de nuestro mail o telefono. Tambien podes visitarnos en nuestra tienda fisica ubicada en La Rioja, Argentina">
     <meta name="keywords" content="SUCULENTA, SUCULENTAS, VIVERO, CONTACTO, TELEFONO, UBICACION, EMAIL">
+
+    <!--LINK DE ARCHIVO NORMALIZE-->
+    <link rel="stylesheet" href="css/normalize.css">
 
     <!--TIPOGRAFIAS LINKEADAS DE GOOGLEFONTS-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -36,28 +38,28 @@
 <body>
 
     <!--ENCABEZADO-->
-    <header>
+    <header class="">
 
         <!--UBICACION Y REDES-->
         <div class="d-flex flex-wrap container ">
 
-            <a class="navbar-brand link-dark" href="#">La Rioja, Argentina</a>
+            <a class="link-dark ubicacion" href="#">La Rioja, Argentina</a>
 
             <ul class="nav ml-auto">
                 <li class="nav-item">
-                    <a href="#" class="nav-link link-dark px-2 transformScale">
+                    <a href="" class="nav-link link-dark px-2 transformScale">
                         <i class="bi bi-facebook" role="img" aria-label="Facebook"></i>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link link-dark px-2 transformScale">
+                    <a href="" class="nav-link link-dark px-2 transformScale">
                         <i class="bi bi-instagram" role="img" aria-label="Instagram"></i>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link link-dark px-2 transformScale">
+                    <a href="https://api.whatsapp.com/send?phone=SucuWorld" class="nav-link link-dark px-2 transformScale">
                         <i class="bi bi-whatsapp" role="img" aria-label="Whatsapp"></i>
                     </a>
                 </li>
@@ -66,7 +68,7 @@
         </div>
 
         <!--MENU PRINCIPAL-->
-        <nav class="container navbar navbar-expand-lg navbar-dark sticky-top">
+        <nav class="container navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
 
                 <a class="navbar-brand" href="index.html">
@@ -83,11 +85,11 @@
                     <ul class="navbar-nav ml-auto mb-2 mb-lg-0 ">
 
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" href="index.html">Inicio</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="catalogo.html">Catalogo</a>
+                            <a class="nav-link" href="catalogo.html">Catálogo</a>
                         </li>
 
                         <li class="nav-item">
@@ -99,7 +101,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link active" href="contacto.html">Contacto</a>
+                            <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -115,25 +117,25 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="contactoItem">
-                            <i class="bi bi-telephone"></i>
-                            <h4>Telefono</h4>
-                            <p>Horarios de atencion son de 09:00 a 20:00 hs.</p>
-                            <a href="#">54-3804-681434</a>
+                            <i class="bi bi-whatsapp"></i>
+                            <h4>Whatsapp</h4>
+                            <p>Horario de atención desde las 09:00 hasta las 20:00 hs.</p>
+                            <a href="https://api.whatsapp.com/send?phone=SucuWorld">54-3804-681434</a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="contactoItem">
                             <i class="bi bi-envelope"></i>
                             <h4>Email</h4>
-                            <p>Contactanos a través de nuestro correo electronico</p>
-                            <a href="">contacto@sucuworld.com</a>
+                            <p>Contactános a través de nuestro correo electrónico</p>
+                            <a href="mailto:contacto@sucuworld.com">contacto@sucuworld.com</a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="contactoItem">
                             <i class="bi bi-geo-alt"></i>
                             <h4>Ubicacion</h4>
-                            <p>Av. Ortiz de Ocampo 967<br>La Rioja, CD 5300</p>
+                            <p>Av. Ortíz de Ocampo 967<br>La Rioja, CP. 5300</p>
                             <a href="https://goo.gl/maps/yNbtEaQCS7rubBVB6">Ver en Google Maps</a>
                         </div>
                     </div>
@@ -142,7 +144,7 @@
         </div>
 
         <!--VISITA NUESTRO LOCAL-->
-        <div class="container">
+        <div class="container" id="visitanos">
             <div class="row">
 
                 <div class="col-md-12">
@@ -166,7 +168,7 @@
             <div class="container">
 
                 <div class="tituloSeccion">
-                    <h2>Podes contactarnos ante cualquier duda, comentario o sugerencia</h2>
+                    <h2>Contactanos ante cualquier duda, comentario o sugerencia</h2>
                 </div>
 
                 <form role="form">
@@ -194,7 +196,7 @@
                         <input type="checkbox">
                     </div>
 
-                    <input type="submit" value="Enviar" class="botonVerde">
+                    <input type="submit" value="Enviar" class="botonVerde transformScale">
 
                 </form>
             </div>
@@ -203,8 +205,60 @@
     </main>
 
     <!--FOOTER-->
-    <footer class="container-fluid ps-5 py-5">
-        <p class="row">© Copyright 2021. Todos los derechos reservados | Karen Ruiz </p>
+    <footer>
+        <div class="container pt-4">
+            <div class="row">
+                <div class="col-md-4 col-4 mt-4">
+                    <h5>Sucuworld</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 link-dark">Inicio</a></li>
+                        <li class="nav-item mb-2"><a href="catalogo.html" class="nav-link p-0 link-dark">Catalogo</a>
+                        </li>
+                        <li class="nav-item mb-2"><a href="blog.html" class="nav-link p-0 link-dark">Blog</a></li>
+                        <li class="nav-item mb-2"><a href="nosotros.html" class="nav-link p-0 link-dark">Nosotros</a>
+                        </li>
+                        <li class="nav-item mb-2"><a href="contacto.html" class="nav-link p-0 link-dark">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-md-4 col-6 mt-4">
+                    <h5>Contáctanos</h5>
+                    <a href="mailto:contacto@sucuworld.com" class="link-dark">contacto@sucuworld.com</a>
+
+                    <h5 class="mt-4">Seguinos en:</h5>
+                    <ul class="nav ml-auto redes">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link link-dark px-2 transformScale">
+                                <i class="bi bi-facebook" role="img" aria-label="Facebook"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link link-dark px-2 transformScale">
+                                <i class="bi bi-instagram" role="img" aria-label="Instagram"></i>
+                            </a>
+                        </li>
+                    </ul>
+
+                </div>
+
+                <div class="col-md-4 mt-4">
+                    <h5>Suscríbete al newsletter</h5>
+                    <p>Recibí las ultimas entradas al catálogo y enterate de las nuevas notas de nuestro Blog.</p>
+                    <div class="d-flex w-100 gap-2">
+                        <label for="newsletter" class="visually-hidden">Correo electrónico</label>
+                        <input type="email" id="newsletter" class="form-control" placeholder="Email">
+                        <button class="btn botonTurquesaLight">Suscribirse</button>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="container justify-content-between py-3 mt-4 border-top">
+                <p class="text-center text-muted">© 2021 Sucuworld. Todos los derechos reservados | Karen Ruiz </p>
+            </div>
+
+        </div>
     </footer>
 
     <!--CDN SCRIPT DE JAVASCRIPT-->
