--- a/nosotros.html
+++ b/nosotros.html
@@ -11,6 +11,9 @@
         content="Sucuworld es un vivero especializado en el cultivo de suculentas. Comercializamos cientos de variedades, y en nuestro sitio podes aprender sobre los cuidados de cada una de ellas y mucho más.">
     <meta name="keywords" content="SUCULENTA, SUCULENTAS, VIVERO, ESPECIES, CUIDADOS, NOSOTROS">
 
+    <!--LINK DE ARCHIVO NORMALIZE-->
+    <link rel="stylesheet" href="css/normalize.css">
+
     <!--TIPOGRAFIAS LINKEADAS DE GOOGLEFONTS-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -24,7 +27,6 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
 
     <!--CDN ICONOS DE BOOTSTRAP-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -41,23 +43,23 @@
         <!--UBICACION Y REDES-->
         <div class="d-flex flex-wrap container ">
 
-            <a class="navbar-brand link-dark" href="#">La Rioja, Argentina</a>
+            <a class="ubicacion link-dark" href="#">La Rioja, Argentina</a>
 
             <ul class="nav ml-auto">
                 <li class="nav-item">
-                    <a href="#" class="nav-link link-dark px-2 transformScale">
+                    <a href="" class="nav-link link-dark px-2 transformScale">
                         <i class="bi bi-facebook" role="img" aria-label="Facebook"></i>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link link-dark px-2 transformScale">
+                    <a href="" class="nav-link link-dark px-2 transformScale">
                         <i class="bi bi-instagram" role="img" aria-label="Instagram"></i>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link link-dark px-2 transformScale">
+                    <a href="https://api.whatsapp.com/send?phone=SucuWorld" class="nav-link link-dark px-2 transformScale">
                         <i class="bi bi-whatsapp" role="img" aria-label="Whatsapp"></i>
                     </a>
                 </li>
@@ -83,11 +85,11 @@
                     <ul class="navbar-nav ml-auto mb-2 mb-lg-0 ">
 
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" href="index.html">Inicio</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="catalogo.html">Catalogo</a>
+                            <a class="nav-link" href="catalogo.html">Catálogo</a>
                         </li>
 
                         <li class="nav-item">
@@ -95,7 +97,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link active" href="nosotros.html">Nosotros</a>
+                            <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
                         </li>
 
                         <li class="nav-item">
@@ -114,35 +116,29 @@
             <div class="container">
                 <div class="row">
 
-                    <div class="col-md-12">
+                    <div class="col-lg-6 align-self-center">
+                        <div class="infoIzquierda">
+                            <span>Mas de 20 años de experiencia</span>
+                            <h2>Sucuworld <em>Vivero</em></h2>
+                            <p>
+                                Vivero SucuWorld nació como un emprendimiento familiar en 1995 en la Ciudad
+                                de La Rioja Capital, Argentina. Nos especializamos en el cultivo
+                                comercializacion y asesoramiento profesional de Suculentas y Cactus. Con el
+                                tiempo fuimos creciendo de la mano de nuestros clientes, y actualmente
+                                contamos con tres invernáculos donde producimos más de 300 especies
+                                diferentes.
+                            </p>
 
-                        <div class="row">
-                            <div class="col-md-6 align-self-center">
-                                <div class="infoIzquierda">
-                                    <span>Mas de 20 años de experiencia</span>
-                                    <h2>Sucuworld<em> Vivero</em></h2>
-                                    <p>
-                                        Vivero SucuWorld nació como un emprendimiento familiar en 1995 en la Ciudad
-                                        de La Rioja Capital, Argentina. Nos especializamos en el cultivo
-                                        comercializacion y asesoramiento profesional de Suculentas y Cactus. Con el
-                                        tiempo fuimos creciendo de la mano de nuestros clientes, y actualmente
-                                        contamos con tres invernáculos donde producimos más de 300 especies
-                                        diferentes.
-                                    </p>
-
-                                    <a href="contacto.html" class="botonVerde">Visitanos</a>
-                                </div>
-                            </div>
-
-                            <div class="col-md-6">
-                                <div class="imagenDerecha">
-                                    <img src="imagenes/imgvivero.jpg" alt="Vivero Sucuworld">
-                                </div>
-                            </div>
-
+                            <a href="contacto.html#visitanos" class="btn botonVerde transformScale">Visitanos</a>
                         </div>
-
                     </div>
+
+                    <div class="col-lg-6">
+                        <div class="imagenDerecha">
+                            <img src="imagenes/imgvivero.jpg" alt="Vivero Sucuworld">
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -154,7 +150,7 @@
                 <div class="row">
 
                     <div class="col-md-12">
-                        <div class="tituloEquipo">
+                        <div class="tituloSeccion">
                             <h2>Nuestro equipo</h2>
                         </div>
                     </div>
@@ -163,13 +159,32 @@
                         <div class="miembroEquipo">
                             <div class="infoEquipo">
                                 <img src="imagenes/aurelio.jpg" alt="Aurelio Ruiz">
-                                <h4>Aurelio Ruiz</h4>
+
+                                <div class="d-flex flex-wrap">
+
+                                    <h4>Aurelio Ruiz</h4>
+
+                                    <ul class="nav ml-auto redes">
+                                        <li class="nav-item">
+                                            <a href="#" class="nav-link link-dark px-2 transformScale">
+                                                <i class="bi bi-facebook" role="img" aria-label="Facebook"></i>
+                                            </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="#" class="nav-link link-dark px-2 transformScale">
+                                                <i class="bi bi-instagram" role="img" aria-label="Instagram"></i>
+                                            </a>
+                                        </li>
+                                    </ul>
+
+                                </div>
+
+                                
                                 <span>Ingeniero Agrónomo</span>
                                 <p>Co-fundador. Cuenta con mas de 17 años ligado al cultivo de plantas suculentas.
                                     Trabajó en el cuidado y creación de espacios verdes tanto públicos como privados. Se
                                     encuentra ligado al área verde del Parque de la Ciudad, en La Rioja. Docente e
-                                    instructor en cursos
-                                    de cultivo y reproducción. </p>
+                                    instructor en cursos de cultivo. </p>
                             </div>
                         </div>
                     </div>
@@ -178,7 +193,26 @@
                         <div class="miembroEquipo">
                             <div class="infoEquipo">
                                 <img src="imagenes/liliana.jpg" alt="Liliana Cerezo">
-                                <h4>Liliana Cerezo</h4>
+
+                                <div class="d-flex flex-wrap">
+
+                                    <h4>Liliana Cerezo</h4>
+
+                                    <ul class="nav ml-auto redes">
+                                        <li class="nav-item">
+                                            <a href="#" class="nav-link link-dark px-2 transformScale">
+                                                <i class="bi bi-facebook" role="img" aria-label="Facebook"></i>
+                                            </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="#" class="nav-link link-dark px-2 transformScale">
+                                                <i class="bi bi-instagram" role="img" aria-label="Instagram"></i>
+                                            </a>
+                                        </li>
+                                    </ul>
+
+                                </div>
+
                                 <span>Licenciada</span>
                                 <p>Coleccionista, viverista, apasionada de las plantas. Cuenta con mas de 11 años de
                                     experiencia en el cultivo de cactus y suculentas. De profesión Licenciada en
@@ -188,6 +222,10 @@
                         </div>
                     </div>
 
+
+
+
+
                 </div>
             </div>
         </div>
@@ -195,8 +233,60 @@
     </main>
 
     <!--FOOTER-->
-    <footer class="container-fluid ps-5 py-5">
-        <p class="row">© Copyright 2021. Todos los derechos reservados | Karen Ruiz </p>
+    <footer>
+        <div class="container pt-4">
+            <div class="row">
+                <div class="col-md-4 col-4 mt-4">
+                    <h5>Sucuworld</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 link-dark">Inicio</a></li>
+                        <li class="nav-item mb-2"><a href="catalogo.html" class="nav-link p-0 link-dark">Catalogo</a>
+                        </li>
+                        <li class="nav-item mb-2"><a href="blog.html" class="nav-link p-0 link-dark">Blog</a></li>
+                        <li class="nav-item mb-2"><a href="nosotros.html" class="nav-link p-0 link-dark">Nosotros</a>
+                        </li>
+                        <li class="nav-item mb-2"><a href="contacto.html" class="nav-link p-0 link-dark">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-md-4 col-6 mt-4">
+                    <h5>Contáctanos</h5>
+                    <a href="mailto:contacto@sucuworld.com" class="link-dark">contacto@sucuworld.com</a>
+
+                    <h5 class="mt-4">Seguinos en:</h5>
+                    <ul class="nav ml-auto redes">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link link-dark px-2 transformScale">
+                                <i class="bi bi-facebook" role="img" aria-label="Facebook"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link link-dark px-2 transformScale">
+                                <i class="bi bi-instagram" role="img" aria-label="Instagram"></i>
+                            </a>
+                        </li>
+                    </ul>
+
+                </div>
+
+                <div class="col-md-4 mt-4">
+                    <h5>Suscríbete al newsletter</h5>
+                    <p>Recibí las ultimas entradas al catálogo y enterate de las nuevas notas de nuestro Blog.</p>
+                    <div class="d-flex w-100 gap-2">
+                        <label for="newsletter" class="visually-hidden">Correo electrónico</label>
+                        <input type="email" id="email" class="form-control" placeholder="Email">
+                        <button class="btn botonTurquesaLight">Suscribirse</button>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="container justify-content-between py-3 mt-4 border-top">
+                <p class="text-center text-muted">© 2021 Sucuworld. Todos los derechos reservados | Karen Ruiz </p>
+            </div>
+
+        </div>
     </footer>
 
     <!--CDN SCRIPT DE JAVASCRIPT-->
